# OSM-garmify

./: .pdm-python  Makefile  README.md  commands_example.sh  do_all_osm.sh  download_tools.sh  extract_and_merge.py  gmapify.py  otm_all.sh  pyproject.toml  tasks.py
scripts/: asia_osm+otm_all.sh  commands_example.sh  download_tools.sh  osm+otm_all.sh
