[project]
name = "OSM-garmify"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jmrf", email = "jose.marcos.rf@gmail.com"},
]
dependencies = [
    "click",
    "tqdm",
    "invoke>=2.2.0",
    "rich>=13.7.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.2",
    "isort>=5.13.2",
]


[tool.pdm.scripts.reformat]
shell = """
    isort .
    ruff format .
"""
help = "Reformat the code using isort and ruff."
